--- a/css/app.css
+++ b/css/app.css
@@ -1107,6 +1107,16 @@ body.settings--open .settings__content {
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px); }
 
+.player-video__subtitles {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1.5em;
+  text-align: center;
+  font-size: 2.5em;
+  text-shadow: 0 2px 1px #000000, 0 -2px 1px #000000, -2px 1px 0 #000000, 2px 0px 1px #000000; }
+
 .player-video.video--load .player-video__loader {
   display: block; }
 
@@ -1159,6 +1169,16 @@ body.settings--open .settings__content {
        -moz-border-radius: 2em;
             border-radius: 2em;
     margin-bottom: 0.6em; }
+    .player-panel__timeline.focus {
+      -webkit-box-shadow: 0 0 0 0.1em #fff;
+         -moz-box-shadow: 0 0 0 0.1em #fff;
+              box-shadow: 0 0 0 0.1em #fff; }
+      .player-panel__timeline.focus .player-panel__position > div:after {
+        -webkit-transform: translateY(-50%) translateX(50%) scale(1.5) !important;
+           -moz-transform: translateY(-50%) translateX(50%) scale(1.5) !important;
+            -ms-transform: translateY(-50%) translateX(50%) scale(1.5) !important;
+             -o-transform: translateY(-50%) translateX(50%) scale(1.5) !important;
+                transform: translateY(-50%) translateX(50%) scale(1.5) !important; }
   .player-panel__peding, .player-panel__position {
     position: absolute;
     top: 0;
@@ -1344,6 +1364,31 @@ body.settings--open .settings__content {
   .player-info__name {
     font-size: 1.5em;
     word-break: break-all; }
+  .player-info__line {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .player-info__time {
+    margin-left: auto;
+    -webkit-flex-shrink: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0;
+    font-size: 1.5em;
+    padding-left: 1em; }
+  .player-info__values {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 1.2em; }
+    .player-info__values > div {
+      margin-right: 1em; }
+      .player-info__values > div span {
+        font-size: 1.2em;
+        font-weight: 300; }
 
 .selectbox {
   position: fixed;
