--- a/css/app.css
+++ b/css/app.css
@@ -708,12 +708,12 @@ body.settings--open .settings__content {
   width: 100%;
 }
 .scroll__body {
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  -o-transition: -o-transform 0.3s;
-  -moz-transition: transform 0.3s, -moz-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s, -moz-transform 0.3s, -o-transform 0.3s;
+  -webkit-transition: margin-left 0.3s, margin-top 0.3s, -webkit-transform 0.3s;
+  transition: margin-left 0.3s, margin-top 0.3s, -webkit-transform 0.3s;
+  -o-transition: margin-left 0.3s, margin-top 0.3s, -o-transform 0.3s;
+  -moz-transition: transform 0.3s, margin-left 0.3s, margin-top 0.3s, -moz-transform 0.3s;
+  transition: transform 0.3s, margin-left 0.3s, margin-top 0.3s;
+  transition: transform 0.3s, margin-left 0.3s, margin-top 0.3s, -webkit-transform 0.3s, -moz-transform 0.3s, -o-transform 0.3s;
 }
 
 .scroll--over {
@@ -1741,6 +1741,12 @@ body.platform--tizen .player-video__paused {
      -moz-background-size: 55% !important;
        -o-background-size: 55% !important;
           background-size: 55% !important;
+}
+.player-panel__tstart {
+  margin-right: 1em;
+}
+.player-panel__tend {
+  margin-left: 1em;
 }
 .player-panel.panel--paused .player-panel__playpause {
   background-image: url(../img/icons/player/play.svg);
@@ -3235,15 +3241,15 @@ body.selectbox--open .selectbox__content {
   transition: opacity 0.5s;
 }
 .screensaver__title.visible {
-  opacity: 1;
+  opacity: 0.5;
 }
 .screensaver__title-name {
   font-size: 3em;
-  font-weight: 800;
+  font-weight: 300;
   margin-bottom: 0.25em;
 }
 .screensaver__title-tagline {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1.5em;
 }
 .screensaver__slides > img {
@@ -3331,15 +3337,42 @@ body.selectbox--open .selectbox__content {
   -o-transition: opacity 0.5s;
   -moz-transition: opacity 0.5s;
   transition: opacity 0.5s;
+  opacity: 0.5;
 }
 .screensaver__datetime-time {
   font-size: 3em;
-  font-weight: 800;
+  font-weight: 300;
   margin-bottom: 0.25em;
 }
 .screensaver__datetime-date {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1.5em;
+}
+.screensaver-chrome {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+}
+.screensaver-chrome__iframe {
+  position: fixed;
+  border: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.screensaver-chrome__overlay {
+  position: fixed;
+  border: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
 .online {
